--- a/argo/envs/dev/backend/values.yaml
+++ b/argo/envs/dev/backend/values.yaml
@@ -28,7 +28,7 @@ secret:
   configJson: |
     {
       "dbsyncconfig" : {
-        "host"    : "dbsync-v3.demeter.run",
+        "host"    : "",
         "dbname"  : "",
         "user"    : "",
         "password" : "",
