adds outcomes serive generator

--- a/argo/applicationsets/app.yaml
+++ b/argo/applicationsets/app.yaml
@@ -19,6 +19,10 @@ spec:
             chartPath: charts/metadata
             valuesPath: argo/envs/dev/metadata/values.yaml
             imageRepo: ghcr.io/intersectmbo/govtool-metadata-validation-dev
+          - name: outcomes
+            chartPath: charts/outcomes
+            valuesPath: argo/envs/dev/outcomes/values.yaml
+            imageRepo: ghcr.io/intersectmbo/govtool-outcomes-pillar-backend
   template:
     metadata:
       name: '{{name}}-dev'
